--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<title>ToDo List JavaScript</title>
-	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 	<div id="app">
-		
+
 	</div>
 	<script src='js/script.js'></script>
 </body>
