--- a/index.html
+++ b/index.html
@@ -8,8 +8,113 @@
 </head>
 <body>
 	<div id="app">
-
+		<div class="todo">
+			<div class="todo__title">список задач</div>
+			<div class="todo__main-block">
+				<div class="todo__content">
+					<div class="todo__scenarios">
+						<div class="scenarios__title">Сценарии</div>
+						<div class="scenarios__items-list">
+							<button class="items-list__item-button item-all">
+								<img class="item-button__image" src="./assets/icons/scenario-icons/user.svg">
+								<span class="item-button__text">Все задачи</span>
+							</button>
+							<button class="items-list__item-button item-free-time">
+								<img class="item-button__image" src="./assets/icons/scenario-icons/sun.svg">
+								<span class="item-button__text">Свободное время</span>
+							</button>
+							<button class="items-list__item-button item-work">
+								<img class="item-button__image" src="./assets/icons/scenario-icons/briefcase.svg">
+								<span class="item-button__text">Рабочие дела</span>
+							</button>
+							<button class="items-list__item-button item-home">
+								<img class="item-button__image" src="./assets/icons/scenario-icons/home.svg">
+								<span class="item-button__text">Домашние дела</span>
+							</button>
+							<button class="items-list__item-button item-favorites item-active">
+								<img class="item-button__image" src="./assets/icons/scenario-icons/bookmark.svg">
+								<span class="item-button__text">Избранное</span>
+							</button>
+							<button class="items-list__item-button-created item-created">
+								<div class="item-button-created__prepend">
+									<img class="item-button-created__image" src="./assets/icons/scenario-icons/info.svg">
+									<span class="item-button-created__text">На пятницу</span>
+								</div>
+								<img class="item-button-created__image" src="./assets/icons/scenario-icons/delete.svg">
+							</button>
+						</div>
+						<div class="scenarios__add">
+							<button class="scenarios__add-button">
+								<img class="add-button__image" src="./assets/icons/scenario-icons/plus.svg"></img>
+								<span class="add-button__body">Добавить сценарий</span>
+							</button>
+							<div class="scenarios__add-input">
+								<input placeholder="Напиши название" type="text" class="add-input__input">
+								<div class="add-input__buttons">
+									<button class="button-cancel">Отмена</button>
+									<button class="button-add">Добавить</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="todo-tasks">
+						<div class="tasks__title">Доступные задачи</div>
+						<div class="tasks__add-task">
+							<input placeholder="Напиши название задачи" type="text" class="add-task__input">
+							<button class="add-task__button">Создать задачу</button>
+						</div>
+						<div class="tasks__sort-delete">
+							<div class="tasks__sort">
+								<button class="tasks__sort-button">
+									<img class="sort-button__icon" src="./assets/icons/other-icons/arrow.svg"></img>
+									<span class="sort-button__text">Сортировка</span>
+								</button>
+							</div>
+							<div class="tasks__delete">
+								<button class="tasks__delete-button">
+									<img class="delete-button__icon" src="./assets/icons/other-icons/trash.svg"></img>
+									<span class="delete-button__text">Очистить список</span>
+								</button>
+							</div>
+						</div>
+						<div class="tasks__tasks-list">
+							<div class="tasks-list__task">
+								<div class="task-left">
+									<button class="task-left__button-circle">
+										<img class="button-circle__image" src="./assets/icons/task-icons/circle.svg">
+									</button>
+									<span class="task-left__text">Сделать техническое задание по теме</span>
+								</div>
+								<div class="task-right">
+									<span class="task-right__data">22:30 28.06.2024</span>
+									<button class="task-right__button-important">
+										<img class="button-important__image" src="./assets/icons/task-icons/star.svg">
+									</button>
+									<div class="task-right__button-delete">
+										<img class="button-delete__image" src="./assets/icons/task-icons/delete.svg">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="tasks__completed-tasks">
+							<button class="completed-tasks__button">
+								<img class="completed-tasks__image" src="./assets/icons/other-icons/chevron.svg">
+								<span class="completed-tasks__text">Выполненные задачи</span>
+							</button>
+						</div>
+						<div class="tasks__completed-tasks-list">
+							<div class="completed-tasks-list__completed-task">
+								<span class="completed-task__text">Сделать техническое задание по теме</span>
+								<button class="completed-task__button-delete">
+									<img class="button-delete__image" src="./assets/icons/task-icons/delete.svg">
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	<script src='js/script.js'></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
