--- a/index.html
+++ b/index.html
@@ -57,25 +57,21 @@
 							</div>
 						</div>
 					</div>
-					<div class="todo-tasks">
+					<div class="todo__tasks">
 						<div class="tasks__title">Доступные задачи</div>
 						<div class="tasks__add-task">
 							<input placeholder="Напиши название задачи" type="text" class="add-task__input">
 							<button class="add-task__button">Создать задачу</button>
 						</div>
 						<div class="tasks__sort-delete">
-							<div class="tasks__sort">
-								<button class="tasks__sort-button">
+							<button class="tasks__sort-button">
 									<img class="sort-button__icon" src="./assets/icons/other-icons/arrow.svg"></img>
 									<span class="sort-button__text">Сортировка</span>
-								</button>
-							</div>
-							<div class="tasks__delete">
-								<button class="tasks__delete-button">
+							</button>
+							<button class="tasks__delete-button">
 									<img class="delete-button__icon" src="./assets/icons/other-icons/trash.svg"></img>
 									<span class="delete-button__text">Очистить список</span>
-								</button>
-							</div>
+							</button>
 						</div>
 						<div class="tasks__tasks-list">
 							<div class="tasks-list__task">
@@ -90,9 +86,9 @@
 									<button class="task-right__button-important">
 										<img class="button-important__image" src="./assets/icons/task-icons/star.svg">
 									</button>
-									<div class="task-right__button-delete">
+									<button class="task-right__button-delete">
 										<img class="button-delete__image" src="./assets/icons/task-icons/delete.svg">
-									</div>
+									</button>
 								</div>
 							</div>
 						</div>
