--- a/index.html
+++ b/index.html
@@ -76,12 +76,14 @@
 						</div>
 						<div class="tasks__bottom">
 							<div class="tasks__tasks-list">
-								<div class="tasks-list__task">
+								<div class="tasks-list__task ">
 									<div class="task-left">
 										<button class="task-left__button-circle">
 											<img class="button-circle__image" src="./assets/icons/task-icons/circle.svg">
 										</button>
-										<span class="task-left__text">Сделать техническое задание по теме</span>
+										<div class="task-left__body">
+											<span class="task-left__text">Сделать техническое задание по темffffе</span>
+										</div>
 									</div>
 									<div class="task-right">
 										<span class="task-right__data">22:30 28.06.2024</span>
