--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
 							</div>
 							<div class="tasks__completed-tasks-list">
 								<div class="completed-tasks-list__completed-task">
-									<span class="completed-task__text">Сделать техническое задание по теме</span>
+									<div class="completed-task__body">
+										<span class="completed-task__text">Сделать техническое задание по темеfffffffffffffffffffffff</span>
+									</div>
 									<button class="completed-task__button-delete">
 										<img class="button-delete__image" src="./assets/icons/task-icons/delete.svg">
 									</button>
