--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 					<div class="todo__scenarios">
 						<div class="scenarios__title">Сценарии</div>
 						<div class="scenarios__items-list">
-							<button class="items-list__item-button item-all">
+							<button class="items-list__item-button item-all animated">
 								<img class="item-button__image" src="./assets/icons/scenario-icons/user.svg">
-								<span class="item-button__text">Все задачи</span>
+								<div class="item-button__body">
+									<span class="item-button__text">Все задачиfffffffffffffffffff</span>
+								</div>
 							</button>
 							<button class="items-list__item-button item-free-time">
 								<img class="item-button__image" src="./assets/icons/scenario-icons/sun.svg">
@@ -35,10 +37,12 @@
 								<img class="item-button__image" src="./assets/icons/scenario-icons/bookmark.svg">
 								<span class="item-button__text">Избранное</span>
 							</button>
-							<button class="items-list__item-button-created item-created">
+							<button class="items-list__item-button-created item-created animated">
 								<div class="item-button-created__prepend">
 									<img class="item-button-created__image" src="./assets/icons/scenario-icons/info.svg">
-									<span class="item-button-created__text">На пятницу</span>
+									<div class="item-button__body">
+										<span class="item-button-created__text">На пятницу</span>
+									</div>
 								</div>
 								<img class="item-button-created__image" src="./assets/icons/scenario-icons/delete.svg">
 							</button>
