--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<div class="todo__scenarios">
 						<div class="scenarios__title">Сценарии</div>
 						<div class="scenarios__items-list">
-							<button class="items-list__item-button item-all animated">
+							<button class="items-list__item-button item-all">
 								<img class="item-button__image" src="./assets/icons/scenario-icons/user.svg">
 								<div class="item-button__body">
 									<span class="item-button__text">Все задачиfffffffffffffffffff</span>
@@ -37,7 +37,7 @@
 								<img class="item-button__image" src="./assets/icons/scenario-icons/bookmark.svg">
 								<span class="item-button__text">Избранное</span>
 							</button>
-							<button class="items-list__item-button-created item-created animated">
+							<button class="items-list__item-button-created item-created">
 								<div class="item-button-created__prepend">
 									<img class="item-button-created__image" src="./assets/icons/scenario-icons/info.svg">
 									<div class="item-button__body">
