add auto create scenarioItems

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<div class="todo__scenarios">
 						<div class="scenarios__title">Сценарии</div>
 						<div class="scenarios__items-list">
-							<button class="items-list__item-button item-all">
+							<!-- <button class="items-list__item-button item-all">
 								<img class="item-button__image" src="./assets/icons/scenario-icons/user.svg">
 								<div class="item-button__body">
 									<span class="item-button__text">Все задачиfffffffffffffffffff</span>
@@ -45,7 +45,7 @@
 									</div>
 								</div>
 								<img class="item-button-created__image" src="./assets/icons/scenario-icons/delete.svg">
-							</button>
+							</button> -->
 						</div>
 						<div class="scenarios__add">
 							<button class="scenarios__add-button">
@@ -122,6 +122,6 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/script.js"></script>
+	<script type='module' src="js/script.js"></script>
 </body>
 </html>
