add autocreate TaskItems

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						</div>
 						<div class="tasks__bottom">
 							<div class="tasks__tasks-list">
-								<div class="tasks-list__task">
+								<!-- <div class="tasks-list__task">
 									<div class="task-left">
 										<button class="task-left__button-circle">
 											<img class="button-circle__image" src="./assets/icons/task-icons/circle.svg">
@@ -98,7 +98,7 @@
 											<img class="button-delete__image" src="./assets/icons/task-icons/delete.svg">
 										</button>
 									</div>
-								</div>
+								</div> -->
 							</div>
 							<div class="tasks__completed-tasks">
 								<button class="completed-tasks__button">
@@ -122,6 +122,6 @@
 			</div>
 		</div>
 	</div>
-	<script type='module' src="js/script.js"></script>
+	<script type="module" src="js/script.js"></script>
 </body>
 </html>
