add auto create CompletedTaskItems

--- a/index.html
+++ b/index.html
@@ -14,39 +14,7 @@
 				<div class="todo__content">
 					<div class="todo__scenarios">
 						<div class="scenarios__title">Сценарии</div>
-						<div class="scenarios__items-list">
-							<!-- <button class="items-list__item-button item-all">
-								<img class="item-button__image" src="./assets/icons/scenario-icons/user.svg">
-								<div class="item-button__body">
-									<span class="item-button__text">Все задачиfffffffffffffffffff</span>
-								</div>
-							</button>
-							<button class="items-list__item-button item-free-time">
-								<img class="item-button__image" src="./assets/icons/scenario-icons/sun.svg">
-								<span class="item-button__text">Свободное время</span>
-							</button>
-							<button class="items-list__item-button item-work">
-								<img class="item-button__image" src="./assets/icons/scenario-icons/briefcase.svg">
-								<span class="item-button__text">Рабочие дела</span>
-							</button>
-							<button class="items-list__item-button item-home">
-								<img class="item-button__image" src="./assets/icons/scenario-icons/home.svg">
-								<span class="item-button__text">Домашние дела</span>
-							</button>
-							<button class="items-list__item-button item-favorites item-active">
-								<img class="item-button__image" src="./assets/icons/scenario-icons/bookmark.svg">
-								<span class="item-button__text">Избранное</span>
-							</button>
-							<button class="items-list__item-button-created item-created">
-								<div class="item-button-created__prepend">
-									<img class="item-button-created__image" src="./assets/icons/scenario-icons/info.svg">
-									<div class="item-button__body">
-										<span class="item-button-created__text">На пятницу</span>
-									</div>
-								</div>
-								<img class="item-button-created__image" src="./assets/icons/scenario-icons/delete.svg">
-							</button> -->
-						</div>
+						<div class="scenarios__items-list"></div>
 						<div class="scenarios__add">
 							<button class="scenarios__add-button">
 								<img class="add-button__image" src="./assets/icons/scenario-icons/plus.svg"></img>
@@ -79,43 +47,14 @@
 							</button>
 						</div>
 						<div class="tasks__bottom">
-							<div class="tasks__tasks-list">
-								<!-- <div class="tasks-list__task">
-									<div class="task-left">
-										<button class="task-left__button-circle">
-											<img class="button-circle__image" src="./assets/icons/task-icons/circle.svg">
-										</button>
-										<div class="task-left__body">
-											<span class="task-left__text">Сделать техническое задание по темffffе</span>
-										</div>
-									</div>
-									<div class="task-right">
-										<span class="task-right__data">22:30 28.06.2024</span>
-										<button class="task-right__button-important">
-											<img class="button-important__image" src="./assets/icons/task-icons/star.svg">
-										</button>
-										<button class="task-right__button-delete">
-											<img class="button-delete__image" src="./assets/icons/task-icons/delete.svg">
-										</button>
-									</div>
-								</div> -->
-							</div>
+							<div class="tasks__tasks-list"></div>
 							<div class="tasks__completed-tasks">
 								<button class="completed-tasks__button">
 									<img class="completed-tasks__image" src="./assets/icons/other-icons/chevron.svg">
 									<span class="completed-tasks__text">Выполненные задачи</span>
 								</button>
 							</div>
-							<div class="tasks__completed-tasks-list">
-								<div class="completed-tasks-list__completed-task">
-									<div class="completed-task__body">
-										<span class="completed-task__text">Сделать техническое задание по темеfffffffffffffffffffffff</span>
-									</div>
-									<button class="completed-task__button-delete">
-										<img class="button-delete__image" src="./assets/icons/task-icons/delete.svg">
-									</button>
-								</div>
-							</div>
+							<div class="tasks__completed-tasks-list"></div>
 						</div>
 					</div>
 				</div>
