add event listeners

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 								<img class="add-button__image" src="./assets/icons/scenario-icons/plus.svg"></img>
 								<span class="add-button__body">Добавить сценарий</span>
 							</button>
-							<span class="scenarios__add-warning">Достигнуто максимальное количество сценариев!</span>
-							<div class="scenarios__add-input">
+							<span class="scenarios__add-warning hidden">Достигнуто максимальное количество сценариев!</span>
+							<div class="scenarios__add-input hidden">
 								<input placeholder="Напиши название" type="text" class="add-input__input">
 								<div class="add-input__buttons">
 									<button class="button-cancel">Отмена</button>
