--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+	<link rel="icon" href="./assets/favicon.svg" type='image/svg'>
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<title>ToDo List JavaScript</title>
 	<link rel="stylesheet" href="styles/main.css">
