--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
+    <title>ToDo List JavaScript</title>
   </head>
   <body>
     <div id="app">
@@ -17,7 +17,7 @@
               <div class="scenarios__items-list"></div>
               <div class="scenarios__add">
                 <button class="scenarios__add-button">
-                  <img class="add-button__image" src="./assets/icons/scenario-icons/plus.svg"></img>
+                  <img class="add-button__image" src="/images/icons/scenario-icons/plus.svg"></img>
                   <span class="add-button__body">Добавить сценарий</span>
                 </button>
                 <span class="scenarios__add-warning hidden">Достигнуто максимальное количество сценариев!</span>
@@ -38,11 +38,11 @@
               </div>
               <div class="tasks__sort-delete">
                 <button class="tasks__sort-button">
-                    <img class="sort-button__icon" src="./assets/icons/other-icons/arrow.svg"></img>
+                    <img class="sort-button__icon" src="/images/icons/other-icons/arrow.svg"></img>
                     <span class="sort-button__text">Сортировка</span>
                 </button>
                 <button class="tasks__delete-button">
-                    <img class="delete-button__icon" src="./assets/icons/other-icons/trash.svg"></img>
+                    <img class="delete-button__icon" src="/images/icons/other-icons/trash.svg"></img>
                     <span class="delete-button__text">Очистить список</span>
                 </button>
               </div>
@@ -50,7 +50,7 @@
                 <div class="tasks__tasks-list"></div>
                 <div class="tasks__completed-tasks">
                   <button class="completed-tasks__button">
-                    <img class="completed-tasks__image" src="./assets/icons/other-icons/chevron.svg">
+                    <img class="completed-tasks__image" src="/images/icons/other-icons/chevron.svg">
                     <span class="completed-tasks__text">Выполненные задачи</span>
                   </button>
                 </div>
@@ -61,6 +61,7 @@
         </div>
       </div>
     </div>
+    <!-- <script type="module" src='./src/js/pathsToIcons.js'></script> -->
     <script type="module" src="/main.js"></script>
   </body>
 </html>
